force-app/main/default/objects/Zentra_Recurring_Payment__c/Zentra_Recurring_Payment__c.object-meta.xml
<CustomObject>
    <description>Tracks automatic recurring payments (standing instructions) set up by a customer via TruZentra agent. Stores payee details, amount, frequency, start/end dates, and status. Developer: BlueForce Team.</description>
    <label>Zentra Recurring Payment</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Recurring Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zentra Recurring Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>