force-app/main/default/objects/Zentra_Recurring_Payment__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The fixed amount to be debited each cycle for this recurring payment.</description>
    <inlineHelpText>Payment amount debited each cycle (in INR).</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>