force-app/main/default/objects/Zentra_Recurring_Payment__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Person Account who set up this recurring payment (standing instruction).</description>
    <inlineHelpText>The customer who owns this recurring payment instruction.</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Zentra Recurring Payments</relationshipLabel>
    <relationshipName>Zentra_Recurring_Payments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>