force-app/main/default/objects/Zentra_Recurring_Payment__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The date until which this recurring payment instruction remains active. Payments stop after this date.</description>
    <inlineHelpText>Date after which no further payments are made. Leave blank for indefinite.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>