force-app/main/default/objects/Zentra_Recurring_Payment__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <description>The most recent date when this recurring payment was successfully executed.</description>
    <inlineHelpText>Date of the last successful payment under this standing instruction.</inlineHelpText>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>