force-app/main/default/objects/Zentra_Recurring_Payment__c/fields/Next_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_Date__c</fullName>
    <description>The next scheduled date for this recurring payment to be executed.</description>
    <inlineHelpText>When the next payment will be debited from your account.</inlineHelpText>
    <label>Next Payment Date</label>
    <type>Date</type>
</CustomField>