force-app/main/default/objects/Zentra_Recurring_Payment__c/fields/Payee_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Payee_Account_Number__c</fullName>
    <description>Masked account number or reference of the payee for this standing instruction.</description>
    <inlineHelpText>Account number or reference of the payee (masked for security).</inlineHelpText>
    <label>Payee Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>