force-app/main/default/objects/Zentra_Recurring_Payment__c/fields/Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_Name__c</fullName>
    <description>Name of the beneficiary or payee receiving the recurring payment.</description>
    <inlineHelpText>Who the payment is being made to (e.g. Electricity Board, Landlord, Insurance Provider).</inlineHelpText>
    <label>Payee Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>