force-app/main/default/objects/Zentra_Recurring_Payment__c/fields/Payment_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Payment_Purpose__c</fullName>
    <description>Purpose or category of this recurring payment (e.g. Utility Bill, Rent, Insurance Premium, SIP, EMI, Other).</description>
    <inlineHelpText>What this standing instruction is for (e.g. Rent, Insurance, SIP).</inlineHelpText>
    <label>Payment Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utility Bill</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Insurance Premium</fullName>
            </value>
            <value>
                <fullName>SIP / Mutual Fund</fullName>
            </value>
            <value>
                <fullName>Loan EMI</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>