force-app/main/default/objects/Zentra_Recurring_Payment__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Optional notes or description for this recurring payment instruction.</description>
    <inlineHelpText>Additional notes or description for this standing instruction.</inlineHelpText>
    <label>Remarks</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>