force-app/main/default/objects/Zentra_Recurring_Payment__c/fields/Source_Account__c.field-meta.xml
<CustomField>
    <fullName>Source_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The financial account from which the recurring payment amount is debited.</description>
    <inlineHelpText>The bank account from which the payment is automatically debited each cycle.</inlineHelpText>
    <label>Source Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Recurring Payments</relationshipLabel>
    <relationshipName>Zentra_Recurring_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>