force-app/main/default/objects/Zentra_Recurring_Payment__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date from which this recurring payment instruction becomes active.</description>
    <inlineHelpText>Date when the first payment is scheduled.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>