force-app/main/default/objects/Zentra_Recurring_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Payee_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Frequency__c</columns>
    <columns>Status__c</columns>
    <columns>Next_Payment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>